# zeta

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  vcxproj.user.template
SDL2-2.0.4/: CMakeLists.txt
SDL2-2.0.4/VisualC-WinRT/UWP_VS2015/: SDL-UWP.vcxproj  SDL-UWP.vcxproj.filters
SDL2-2.0.4/VisualC-WinRT/WinPhone80_VS2012/: SDL-WinPhone80.vcxproj  SDL-WinPhone80.vcxproj.filters
SDL2-2.0.4/VisualC-WinRT/WinPhone81_VS2013/: SDL-WinPhone81.vcxproj  SDL-WinPhone81.vcxproj.filters
SDL2-2.0.4/VisualC-WinRT/WinRT80_VS2012/: SDL-WinRT80.sln  SDL-WinRT80.vcxproj  SDL-WinRT80.vcxproj.filters
SDL2-2.0.4/VisualC-WinRT/WinRT81_VS2013/: SDL-WinRT81.vcxproj  SDL-WinRT81.vcxproj.filters
SDL2-2.0.4/VisualC-WinRT/tests/loopwave/: Package.appxmanifest  loopwave_VS2012.vcxproj
SDL2-2.0.4/VisualC-WinRT/tests/testthread/: Package.appxmanifest  testthread_VS2012.vcxproj
SDL2-2.0.4/VisualC/SDL/: SDL.vcxproj.filters
SDL2-2.0.4/VisualC/SDLtest/: SDLtest.vcxproj
SDL2-2.0.4/VisualC/tests/checkkeys/: checkkeys.vcxproj
SDL2-2.0.4/VisualC/tests/controllermap/: controllermap.vcxproj
SDL2-2.0.4/VisualC/tests/loopwave/: loopwave.vcxproj
SDL2-2.0.4/VisualC/tests/testatomic/: testatomic.vcxproj
SDL2-2.0.4/VisualC/tests/testautomation/: testautomation.vcxproj
SDL2-2.0.4/VisualC/tests/testdraw2/: testdraw2.vcxproj
SDL2-2.0.4/VisualC/tests/testfile/: testfile.vcxproj
SDL2-2.0.4/VisualC/tests/testgamecontroller/: testgamecontroller.vcxproj
SDL2-2.0.4/VisualC/tests/testgesture/: testgesture.vcxproj
SDL2-2.0.4/VisualC/tests/testgl2/: testgl2.vcxproj
SDL2-2.0.4/VisualC/tests/testgles2/: testgles2.vcxproj
SDL2-2.0.4/VisualC/tests/testjoystick/: testjoystick.vcxproj
SDL2-2.0.4/VisualC/tests/testoverlay2/: testoverlay2.vcxproj
SDL2-2.0.4/VisualC/tests/testplatform/: testplatform.vcxproj
SDL2-2.0.4/VisualC/tests/testpower/: testpower.vcxproj
SDL2-2.0.4/VisualC/tests/testrendertarget/: testrendertarget.vcxproj
SDL2-2.0.4/VisualC/tests/testrumble/: testrumble.vcxproj
SDL2-2.0.4/VisualC/tests/testscale/: testscale.vcxproj
SDL2-2.0.4/VisualC/tests/testshape/: testshape.vcxproj
SDL2-2.0.4/VisualC/tests/testsprite2/: testsprite2.vcxproj
SDL2-2.0.4/VisualC/visualtest/: visualtest_VS2012.vcxproj
common/: canvas.hpp  event.hpp  json.hpp  window.hpp
common/ui/: style.hpp
editor/: main.cpp
glew/: CMakeLists.txt
glm/glm/simd/: platform.h
(+1 files in other folders)
